<resources>
    <string name="app_name">BuyMore</string>
    <string name="todo">TODO</string>
    <string name="prompt_mail">Enter Phone Number</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="cornfirm_password">Confirm Password</string>
    <string name="enter_home_address">Enter Home address</string>
    <string name="have_account">have an account?<ul>Sign in</ul></string>
    <string name="new_create_account"><ul>Create Account</ul></string>
    <string name="welcome">Welcome</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="cart">Cart</string>
    <string name="sign_out">Sign Out</string>
    <string name="yambanso_kausiwa">Bsc-inf-07-17@cc.ac.mw</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favourite_products">Favourite Products</string>
    <string name="phones">Phones</string>
    <string name="laptops">Laptops</string>
    <string name="fashion">fashion</string>
    <string name="popular_items">Popular Items</string>
    <string name="item_name">Item Name</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="item">Item</string>
    <string name="quantity">Quantity</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="description">description</string>
    <string name="add_to_favourites">Enquire</string>
    <string name="add_new_item">add new Item</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="spinnerprompt">Select Item Category</string>
    <string name="enter_item_quantity">Enter item quantity</string>
    <string name="price_k4000000">Price : K4000000</string>
    <string name="nortifications">Nortifications</string>
    <string name="enter_email">Enter Email</string>
    <string name="mail">Enter Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_pas">Reset password</string>
    <string name="cancel">Cancel</string>
    <string name="item_x_">Item x has been order by sososososo</string>
    <string-array name="category_array">
        <item>Laptop</item>
        <item>Fashion</item>
        <item>Phones</item>
    </string-array>

</resources>