<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menuhome"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"  />

    <item android:id="@+id/menuFavourites"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favourites"  />


    <item android:id="@+id/addItem"
        android:title="Add Item"
        android:icon="@drawable/ic_baseline_add_24"
        />

    <item android:id="@+id/myItems"
        android:title="My Items"
        android:icon="@drawable/icbag"
        />

    <item android:id="@+id/menuCart"
        android:icon="@drawable/ic_cart"
        android:title="@string/cart"  />

    <item android:title="others">
        <menu>
            <item android:id="@+id/menuSignOut"
                android:icon="@drawable/ic_baseline_login_24"
                android:title="@string/sign_out"  />
        </menu>
    </item>


</menu>