<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".screen_fragment.item_Details">

    <!-- TODO: Update blank fragment layout -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="408dp"
        android:layout_height="731dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/itemPicture"
            android:layout_width="408dp"
            android:layout_marginStart="5dp"
            android:layout_height="345dp"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/acer_nitro_5" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:text="@string/item"
            android:textSize="20sp"
            android:textStyle="bold" />

            <ImageView
                android:id="@+id/add_favourites"
                android:src="@drawable/ic_favorite"
                android:layout_marginStart="150dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:backgroundTint="@color/white"
                app:tint="@color/black" />


        </LinearLayout>
        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginStart="60dp"
            android:padding="5dp"
            android:text="@string/price"
            android:textSize="16sp" />


        <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:padding="5dp"
                android:textColor="@color/black"
                android:text="@string/category"
                android:textSize="16sp" />




        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginStart="60dp"
            android:padding="5dp"
            android:text="@string/quantity"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/item_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginStart="60dp"
            android:padding="5dp"
            android:text="@string/description"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/enquire"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="152dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="#555151"
                android:text="@string/add_to_favourites" />

            <Button
                android:id="@+id/addCart"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="197dp"
                android:layout_height="64dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/teal_700"
                android:text="@string/add_to_cart" />

        </LinearLayout>

    </LinearLayout>
        </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>